--- a/front/src/app/features/bet/bet-card/bet-card.component.html
+++ b/front/src/app/features/bet/bet-card/bet-card.component.html
@@ -4,11 +4,13 @@
     <div class="flex flex-col">
       @for (runner of betConfig.runners; track runner.id) {
         <div class="flex mb-2">
-          <div class="w-64 text-sm content-center font-bold">{{ runner.name }}</div>
+          <div class="w-64 text-sm content-center font-bold" [ngStyle]="{'color': runner.color }"
+          >{{ runner.name }}
+          </div>
           <button
             class="w-32 h-8 pointer-events-auto rounded-md font-semibold text-white shadow-lg"
             (click)="bet(runner, betConfig)"
-            [ngStyle]="{'background-color': runner.color }"
+            [ngClass]="(runner.odds | oddsColor: 'color') + ' ' + (runner.odds | oddsColor: 'hover')"
           >
             {{ runner.odds }}
           </button>
