--- a/front/src/app/features/robot/robot-detail/robot-detail.component.scss
+++ b/front/src/app/features/robot/robot-detail/robot-detail.component.scss
@@ -1,3 +1,20 @@
 img {
   object-fit: contain;
 }
+
+.stat-bar {
+  display: inline-block;
+  height: 100%;
+}
+
+.stat-bar-Stamina {
+  background-color: rgb(74, 222, 128);
+}
+
+.stat-bar-Intelligence {
+  background-color: rgb(250, 204, 21);;
+}
+
+.stat-bar-Speed {
+  background-color: #7dd3fc;
+}
