--- a/front/src/app/features/robot/robot-detail/robot-detail.component.html
+++ b/front/src/app/features/robot/robot-detail/robot-detail.component.html
@@ -5,14 +5,27 @@
       Retour
     </a>
   </div>
-  <div class="mt-3 flex ">
+  <div class="mt-3 w-full">
     @if (robot(); as robot) {
-      <div class="relative flex-1">
-        <img [ngSrc]="'/assets/images/bots/' + robot.name + '.png'" fill
-             class="m-2" [alt]="robot.name">
-      </div>
-      <div class="flex-1">
-        <pre>{{ robot | json }}</pre>
+      <div class="flex flex-col">
+        <h1 class="text-7xl text-white font-bold self-center">{{ robot.name }}</h1>
+        <div class="ml-8 mt-12 flex">
+          <img [ngSrc]="'/assets/images/bots/' + robot.name + '.png'"
+               width="300"
+               height="300"
+               class="m-2" [alt]="robot.name">
+          <div class="m-4 flex flex-col">
+            <p class="text-white">{{ robot.description }}</p>
+            <ul class="mt-12 w-2/4">
+              @for(stat of robot.stats; track stat.type) {
+                <li class="flex justify-between mb-1">
+                  <span class="flex-1 text-white">{{stat.type}}:</span>
+                  <span class="bg-white flex-1"><span class="stat-bar stat-bar-{{stat.type}}" [ngStyle]="{width: stat.value + 'px'}"></span></span>
+                </li>
+              }
+            </ul>
+          </div>
+        </div>
       </div>
     } @else {
       <p class="m-3 text-white text-center">Robot introuvable</p>
