--- a/front/src/app/features/race/race-start-timer/race-start-timer.component.html
+++ b/front/src/app/features/race/race-start-timer/race-start-timer.component.html
@@ -1,5 +1,5 @@
-<div class="grow-0 flex mt-4 justify-center timer-container">
-  <div class="flex flex-col p-4 text-white">
+<div class="flex mt-2 justify-center timer-container">
+  <div class="flex flex-col p-2 text-white">
     @if (raceTimer() > 0) {
       <p>Les paris seront cloturés dans</p>
       <p class="mt-2 text-4xl font-bold text-center">{{ raceTimer() }}s</p>
