--- a/front/src/app/features/robot/robot-detail/robot-detail.component.html
+++ b/front/src/app/features/robot/robot-detail/robot-detail.component.html
@@ -10,11 +10,11 @@
       <div class="flex flex-col">
         <h1 class="text-7xl text-white font-bold self-center">{{ robot.name }}</h1>
         <div class="ml-8 mt-12 flex">
-          <img [ngSrc]="'/assets/images/bots/' + robot.name + '.png'"
-               width="300"
-               height="300"
-               class="m-2" [alt]="robot.name">
-          <div class="m-4 flex flex-col">
+          <div class="w-64 relative">
+            <img [ngSrc]="'/assets/images/bots/' + robot.name + '.png'" fill
+                 class="m-2" [alt]="robot.name">
+          </div>
+          <div class="flex-1 m-4 flex flex-col">
             <p class="text-white">{{ robot.description }}</p>
             <ul class="mt-12 w-2/4">
               @for(stat of robot.stats; track stat.type) {
