change flow examples, change angular version to 18.2 for @let

--- a/front/src/app/features/robot/list-robot/list-robot.component.html
+++ b/front/src/app/features/robot/list-robot/list-robot.component.html
@@ -3,5 +3,7 @@
     @for (robot of robots; track robot.name) {
       <app-card class="flex-1" [robot]="robot"/>
     }
+  } @else {
+    <p>Aucun participant</p>
   }
 </div>
